@@ -32,13 +32,13 @@ my $prereqs  = {
     'Class::Usul' => 'v0.45.0',
     'Crypt::Eksblowfish' => '0.009',
     'Daemon::Control' => '0.000009',
-    'Exporter::Tiny' => '0.026',
-    'File::DataClass' => 'v0.43.0',
+    'Exporter::Tiny' => '0.038',
+    'File::DataClass' => 'v0.44.0',
     'HTML::Accessors' => 'v0.11.0',
     'HTTP::Body' => '1.11',
     'HTTP::Message' => '6.06',
     'Module::Pluggable' => '5.1',
-    'Moo' => '1.004',
+    'Moo' => '1.005000',
     'Plack' => '1.0018',
     'Plack::Middleware::Deflater' => '0.08',
     'Plack::Middleware::LogErrors' => '0.001',
@@ -47,16 +47,16 @@ my $prereqs  = {
     'Starman' => '0.3000',
     'Template' => '2.22',
     'Text::MultiMarkdown' => '1.000034',
-    'Try::Tiny' => '0.18',
+    'Try::Tiny' => '0.22',
     'Type::Tiny' => '0.046',
     'URI' => '1.60',
-    'Unexpected' => 'v0.23.0',
-    'Web::Simple' => '0.020',
+    'Unexpected' => 'v0.27.0',
+    'Web::Simple' => '0.028',
     'XML::Simple' => '2.18',
     'YAML::Tiny' => '1.62',
     'namespace::autoclean' => '0.19',
     'perl' => '5.010001',
-    'strictures' => '1.004004',
+    'strictures' => '1.005004',
     'warnings::illegalproto' => '0.001002'
   },
 };
