@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Get /favicon.ico now returns 404
           - Added make_skin method to CLI
           - Renamed less files to create skin structure
           - Improved layout of profile-user form
